<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="password_">Enter Your Password</string>
    <string name="mobile_number">Enter Your Mobile Number</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="send">Send</string>
    <string name="sendbt">Send</string>
    <string name="preferences_file_name">Avengers Preferences</string>
    <string name="log_out">log out</string>
</resources>